# serializer version: 1
# name: test_extract_search_filter_field_djangoql_only
  list([
    dict({
      'choices': None,
      'format': 'DjangoQL query, e.g. title ~ "django" and author.username = "admin"; operators = != ~ !~ > >= < <= in, not in, and, or, parentheses; None, True, False; related fields with a dot',
      'key': 'q',
      'related_resource_uri': None,
      'title': 'Search',
    }),
  ])
# ---
# name: test_extract_search_filter_field_with_djangoql_toggle
  list([
    dict({
      'choices': None,
      'format': 'free-text search across: title, body. Set djangoql=on to send a DjangoQL query',
      'key': 'q',
      'related_resource_uri': None,
      'title': 'Search',
    }),
    dict({
      'choices': None,
      'format': 'optional; on = read q as a DjangoQL query, e.g. title ~ "django" and author.username = "admin"; operators = != ~ !~ > >= < <= in, not in, and, or, parentheses; None, True, False; related fields with a dot',
      'key': 'djangoql',
      'related_resource_uri': None,
      'title': 'DjangoQL search',
    }),
  ])
# ---
# name: test_extract_search_filter_field_without_djangoql
  list([
    dict({
      'choices': None,
      'format': 'free-text search across: title',
      'key': 'q',
      'related_resource_uri': None,
      'title': 'Search',
    }),
  ])
# ---
